tests/common/snapshots/squashfs__common__tests__squashfs.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 427697
  name: squashfs
  confidence: 250
  description: "SquashFS file system, Little Endian, version: 4.0, compression: gzip, inode count: 5, block size: 131072, image size: 427697 bytes, created: 1970-01-01 00:00:00"
  always_display: false
  extraction_declined: false
