tests/common/snapshots/squashfs__common__tests__squashfs.rs:7:5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 315
  name: squashfs
  confidence: 250
  description: "SquashFS file system, little endian, version: 4.0, compression: gzip, inode count: 2, block size: 131072, image size: 315 bytes, created: 2024-11-02 21:29:35"
  always_display: false
  extraction_declined: false
